tests/init/neg/features-trees2.scala
object Trees {                    // error
  class ValDef { counter += 1 }
  class EmptyValDef extends ValDef
  val theEmptyValDef = new EmptyValDef
  private var counter = 0
}
